testProjects/trainPortfolio/index.css
/* ... */
.nav-item.nav-right{
    align-self: flex-end;
    margin-left: auto;
}



#selector{
    width: 200px;
    height:100%;
    position: absolute;
    top:0px;
    left:-200px;
    border-radius: inherit;
    box-sizing: border-box;
    border: #025a89 3px solid;
    z-index: 0;
    padding-inline: 20px;
    transition: all 0.3s cubic-bezier(.22,.61,.36,1);
    background-color: transparent;
    z-index: 10;
    backdrop-filter: invert(1);
    pointer-events: none;
}

#selector.selectorOpen{
    /* background-color: red; */
    height: 500px;
    z-index: 100;
    top:0px;
}

#selectortwo.selectorOpen{
    height: 500px;
    top:0px;
}

#selectortwo{
    top:0px;
    width: 200px;
    height:100%;
    position: absolute;
    left:-200px;
    border-radius: inherit;
    box-sizing: border-box;
    border: transparent 3px solid;
    overflow: hidden;
    
    padding-inline: 20px;
    transition: all 0.3s cubic-bezier(.22,.61,.36,1);
    background-color: rgba(255, calc(255 - 114), calc(255 - 176));
    z-index: 0;
    
    
    pointer-events: none;
}

#logoimg{
    max-height:100%;
}
#logo{
    padding-right: 0px;
    margin-right: 0px;
}

.main-body{
    
    display: flex;
    
    margin:auto;
    flex-wrap: wrap;
    margin-top:80px;
    width: calc(100% - 32px);
    max-width: 1100px;
}   


.station{
    font-family: 'Erbar';
    font-size: 63px;
    color:white;
    
    align-items: center;
    margin:auto;
    margin-right: 0px;
    margin-left:0px;
    position: relative;
    top: -3px;
}

.header-container{
    margin-top: 20px;
    width:100%;
    background-color: #00b06d;
    border-radius: 10px;
    padding: 10px;
    display:flex;
    padding-right: 0px;
    transition:  all 0.1s ease;
    
    
    
}

@media screen and (max-width: 1750px){
    .header-container{
        margin-top: 50px;
    }
}

.stationContainer{
    height:calc(100% + 20px);
    display: flex;
    margin-left:20px;
    align-items: left;
    justify-content: center;
    flex-direction: column;
    padding-right:15px;
    position: relative;
    top:-10px;
    border-right: #008451 solid 3px;
}

.subStation{
    font-family: 'Erbar';
    font-style: italic;
    font-size: 23px;
    color:rgba(255,255,255,0.86);
    display: inline-flex;
    
}
.subStation:hover{

    color:rgba(255,255,255,1);
    text-decoration: underline;
}


.before::before{
    content:'';
    background-image: url(Left_arrow.svg);
    background-size: cover;
    filter:invert();
    height:20px;
    width:24px;
    top:3px;
    right:5px;
    position: relative;

}


.after::before{
    content:'';
    background-image: url(Left_arrow.svg);
    background-size: cover;
    filter:invert();
    height:20px;
    width:24px;
    top:3px;
    right:5px;
    transform: scaleX(-1);

    position: relative;

}

.space-filler{

    
    
    flex:1;

    border-top-right-radius: inherit;
    border-bottom-right-radius: inherit;
    position:relative;
    
    display: flex;
    align-items:center;
    justify-content: right;
    
}

.addressContainer{
    padding-right: 15px;
    font-family: 'AuxMono';
    font-size: 15px;
    text-align: right;
    color:white;
}

.departure{
    width: calc(100% - 20px);
    display: grid;
    grid-template-columns: 75% 25%;
    margin-top: 20px;
    gap: 20px;
}

@media (min-width: 2000px) {
    .departure{
        grid-template-columns: 80% 20%;
    }
}
.departureHeader{
    background-color: #fffff8;
    font-family: 'Erbar';
    
    font-size: 50px;
    width:100%;

    border: var(--border) 3px solid;
    padding:10px;
    border-bottom: none;
    text-align: center;
    box-sizing: border-box;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;

}
.departureFooter{
    
    border: var(--border) 3px solid;
    border-top: none;
    height:15px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    
    background-color: #fffff8;
}
.chipContainer{
    width:100%;
    background-color: black;
    height:60px;
    top:-10px;
    position: relative;
    z-index:-1;
}

.depContainer{
    width:100%;
    display:grid;
}

.singleDigit{
    background-color: #2b2b28;
    font-size: 23px;
    
    padding:2px;
    border-radius: 3px;
    box-sizing: border-box;
    box-shadow: inset 0px 0px 3px black;
    margin-top: 2.5px;
    margin-bottom: 2.5px;
    transition: all 2s ease-in-out;

    
}

.singleDigit:active{
    pointer-events: none;
}

.singleDigit:hover{
    background-color: #575752;
    
    transition: all 0.1s ease-in-out;
}
.singleDep{
    background-color: #393935;
    width:100%;
    color:white;
    box-sizing: border-box;
    padding:10px;
    margin-top: 10px;
    
    font-family: 'AuxMono';
    display:table-row;
    transition: all 0.2s ease-in-out;
}




.singleDep:hover{
    background-color: #4a4a45;
    
}

.singleDep.rowSelected{
    background-color: #393935;
    border-bottom: var(--border) 3px solid;
    transition: all 0.2s ease-in-out;
}

.singleDep.rowUnselected{
    filter: brightness(0.8) opacity(0.8);
    transition: all 0.2s ease-in-out;
}

.status-boarding{
    color: #00b06d;
}
.status-late{
    color: #f4e00a;
}
.status-early{
    color: #0ad5f4;
}
.status-departed{
    color: #f40a0a;
}

.depField{
    display:flex;
    flex-direction: row;
    gap:3px;
    align-items: center;
    justify-content: center;
    
}

.depField:active{
    pointer-events: none;
}

.top-row{
    background-color: #54544e;
    font-family: "Erbar";
    color: white;
    font-size: 25px;
    border:none;
}

.depContainer{
    display: table;
    
    padding: 10px;
    
    border-collapse: collapse;
    
}

.depContainer td{
    padding-inline: 5px;
    align-items: center;
    text-align: center;
}

.infocontainer{
    width:100%;
}
/* ... */

